# csv-wp-updater-rs

./: .env.sample  .gitignore  docker-compose.yml
api/: package.json
api/public/: index.html
api/src/: server.ts
api/src/helpers/: helper.ts  uploadhelper.ts
api/src/lib/: rabbitmq.ts
api/src/lib/redis/: index.ts
api/src/types/: queue.ts  request.ts  response.ts
updater/: Cargo.toml  Dockerfile
updater/src/: main.rs  worker.rs
updater/src/controllers/: mod.rs  queue_handler.rs  woocommerce_processor.rs
updater/src/helper/: file_helper.rs  mod.rs
updater/src/libs/: mod.rs  redis.rs
updater/src/types/: csv_field_woo_mapper.rs  mod.rs  woocommerce.rs
