[package]
name = "pdfz"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
tonic = "0.12.3"
futures-lite = "2.6.0"
uuid = "1.12.0"
amiquip = "0.4.2"
tracing = "0.1.41"
anyhow = "1.0.95"
redis = {version = "0.29.2",features = ["tokio-comp", "aio"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
tonic-build = "0.12.3"
